Mostly done but main problem is that change of real result is one step behind for example if it is written bill total 100 and tip 10 it will write 101 and after you write for example 1 tip than it will show 110  I hope I will solve this problem

--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,3 @@ body {
   background-color: #8990ec;
   color:white;
 }
-.container {
-  width:400px;
-  height:600px;
-  background-color: #272639;
-  border-radius: 20px;
-}
